--- a/style.css
+++ b/style.css
@@ -17,13 +17,20 @@ body {
   height: 100vh;
   color: #333;
   background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
 }
 
 /* LAYOUT */
-main {
+.header {
+  margin: 2rem 1rem;
+  font-size: 32px;
+  font-weight: bold;
+  color: #ddd;
+}
+
+.main {
   position: relative;
   width: 100rem;
   height: 60rem;
@@ -168,4 +175,61 @@ main {
 
 .hidden {
   display: none;
+}
+
+.show-modal {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 1rem 1rem;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #444;
+
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.cntr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* CLASSES TO MAKE MODAL WORK */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
